@@ -3,6 +3,9 @@
 #
 
 
+2021-06-02 -> ## amtrack stuff
+              fix values[] handling
+
 2021-06-01 -> ## amtrack stuff
               add next parts for display handling
 
